# MLaHLS23_mlops_hw

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  infer.py  models.dvc  prepare_dataframe.py  pyproject.toml  setup.cfg  train.py
.dvc/: config
conf/: config.yaml
